Prevent image distortions in IE. Fixes #62

--- a/css/blueimp-gallery-video.css
+++ b/css/blueimp-gallery-video.css
@@ -1,6 +1,6 @@
 @charset 'UTF-8';
 /*
- * blueimp Gallery Video Factory CSS 1.1.0
+ * blueimp Gallery Video Factory CSS 1.1.1
  * https://github.com/blueimp/Gallery
  *
  * Copyright 2013, Sebastian Tschan
@@ -18,6 +18,8 @@
   bottom: 0;
   left: 0;
   margin: auto;
+  width: auto;
+  height: auto;
   max-width: 100%;
   max-height: 100%;
   opacity: 1;
